# exchange-craft

./: .gitignore  CMakeLists.txt  CSVProcessor.cpp  CSVProcessor.h  ExchangeCore.cpp  ExchangeCore.h  Order.cpp  Order.h  OrderTypeConverter.cpp  OrderTypeConverter.h  main.cpp  modularization.md  readme.md  todo.md
frontend/: CLIFrontEnd.cpp  CLIFrontEnd.h  CSVProcessor.cpp
